<?xml version="1.0"?>
<package format="2">
  <name>fusion2urdf_description</name>
  <version>0.0.0</version>
  <description>The fusion2urdf_description package</description>
  <maintainer email="nilutpolkashyap@prosystem24.de">nilutpolkashyap</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
